# finance-mcp

./: README.md  pyproject.toml  server.py  zerodha_utils.py
