[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kushagra Soni", email = "sonikushu007@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.54.0",
    "kiteconnect>=5.0.1",
    "mcp[cli]>=1.9.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.62",
]
